...
        BottomNavigationBarItem(icon: Icon(Icons.home), label: 'Home'),
        BottomNavigationBarItem(icon: Icon(Icons.grass), label: 'Potager'),
        BottomNavigationBarItem(icon: Icon(Icons.smart_toy_outlined), label: 'Planto IA'),
        BottomNavigationBarItem(icon: Icon(Icons.bar_chart), label: 'Stats'),
        BottomNavigationBarItem(
          icon: Icon(Icons.person_outline),
          label: 'Profil',
        ),
      ],
      onTap: (index) {
        if (index == 1) {
          Navigator.of(context)
              .push(MaterialPageRoute(builder: (_) => const GardenPage()))
...
